Fixing bulleted list spacing

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -42,6 +42,7 @@ h1.interior {
 .post ul,
 .post ol {
   margin: 1.5em;
+  margin-top: 0em;
 }
 
 .post li {
